eqn/y.output
Terminals which are not used

   YYCOLON


Grammar

    0 $accept: equation $end

    1 equation: expr YYEQUAL expr
    2         | expr
    3         | /* empty */

    4 expr: summand YYDOTDOT summand
    5     | expr YYCOMMA expr
    6     | summand

    7 summand: summand YYPLUS prod
    8        | summand YYMINUS prod
    9        | summand YYPLUS YYMINUS prod
   10        | summand YYMINUS YYPLUS prod
   11        | YYMINUS prod
   12        | YYPLUS prod
   13        | prod

   14 prod: simppow
   15     | prod YYTIMES simppow
   16     | prod YYDOT simppow
   17     | prod YYDEVIDE simppow
   18     | prod YYTIMES YYMINUS simppow
   19     | prod YYDEVIDE YYMINUS simppow
   20     | prod simppow

   21 simppow: simp
   22        | simp YYPOWER simp
   23        | simp YYPOWER YYMINUS simp

   24 simp: YYNAME
   25     | YYNUMBER
   26     | YYFUNNAME simp
   27     | YYCONSTANT
   28     | YYLBRACE expr YYRBRACE
   29     | YYLSQUARE expr YYCOMMA expr YYRSQUARE


Terminals, with rules where they appear

$end (0) 0
error (256)
YYLBRACE (258) 28
YYRBRACE (259) 28
YYLSQUARE (260) 29
YYRSQUARE (261) 29
YYCOLON (262)
YYNUMBER (263) 25
YYNAME (264) 24
YYFUNNAME (265) 26
YYCONSTANT (266) 27
YYEQUAL (267) 1
YYDOTDOT (268) 4
YYCOMMA (269) 5 29
YYMINUS (270) 8 9 10 11 18 19 23
YYPLUS (271) 7 9 10 12
UMINUS (272)
YYDOT (273) 16
YYDEVIDE (274) 17 19
YYTIMES (275) 15 18
ASSOCIATE (276)
YYPOWER (277) 22 23


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
equation (24)
    on left: 1 2 3, on right: 0
expr (25)
    on left: 4 5 6, on right: 1 2 5 28 29
summand (26)
    on left: 7 8 9 10 11 12 13, on right: 4 6 7 8 9 10
prod (27)
    on left: 14 15 16 17 18 19 20, on right: 7 8 9 10 11 12 13 15 16
    17 18 19 20
simppow (28)
    on left: 21 22 23, on right: 14 15 16 17 18 19 20
simp (29)
    on left: 24 25 26 27 28 29, on right: 21 22 23 26


state 0

    0 $accept: . equation $end

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 7
    YYPLUS      shift, and go to state 8

    $default  reduce using rule 3 (equation)

    equation  go to state 9
    expr      go to state 10
    summand   go to state 11
    prod      go to state 12
    simppow   go to state 13
    simp      go to state 14


state 1

   28 simp: YYLBRACE . expr YYRBRACE

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 7
    YYPLUS      shift, and go to state 8

    expr     go to state 15
    summand  go to state 11
    prod     go to state 12
    simppow  go to state 13
    simp     go to state 14


state 2

   29 simp: YYLSQUARE . expr YYCOMMA expr YYRSQUARE

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 7
    YYPLUS      shift, and go to state 8

    expr     go to state 16
    summand  go to state 11
    prod     go to state 12
    simppow  go to state 13
    simp     go to state 14


state 3

   25 simp: YYNUMBER .

    $default  reduce using rule 25 (simp)


state 4

   24 simp: YYNAME .

    $default  reduce using rule 24 (simp)


state 5

   26 simp: YYFUNNAME . simp

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    simp  go to state 17


state 6

   27 simp: YYCONSTANT .

    $default  reduce using rule 27 (simp)


state 7

   11 summand: YYMINUS . prod

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    prod     go to state 18
    simppow  go to state 13
    simp     go to state 14


state 8

   12 summand: YYPLUS . prod

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    prod     go to state 19
    simppow  go to state 13
    simp     go to state 14


state 9

    0 $accept: equation . $end

    $end  shift, and go to state 20


state 10

    1 equation: expr . YYEQUAL expr
    2         | expr .
    5 expr: expr . YYCOMMA expr

    YYEQUAL  shift, and go to state 21
    YYCOMMA  shift, and go to state 22

    $default  reduce using rule 2 (equation)


state 11

    4 expr: summand . YYDOTDOT summand
    6     | summand .
    7 summand: summand . YYPLUS prod
    8        | summand . YYMINUS prod
    9        | summand . YYPLUS YYMINUS prod
   10        | summand . YYMINUS YYPLUS prod

    YYDOTDOT  shift, and go to state 23
    YYMINUS   shift, and go to state 24
    YYPLUS    shift, and go to state 25

    $default  reduce using rule 6 (expr)


state 12

   13 summand: prod .
   15 prod: prod . YYTIMES simppow
   16     | prod . YYDOT simppow
   17     | prod . YYDEVIDE simppow
   18     | prod . YYTIMES YYMINUS simppow
   19     | prod . YYDEVIDE YYMINUS simppow
   20     | prod . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYDOT       shift, and go to state 26
    YYDEVIDE    shift, and go to state 27
    YYTIMES     shift, and go to state 28

    $default  reduce using rule 13 (summand)

    simppow  go to state 29
    simp     go to state 14


state 13

   14 prod: simppow .

    $default  reduce using rule 14 (prod)


state 14

   21 simppow: simp .
   22        | simp . YYPOWER simp
   23        | simp . YYPOWER YYMINUS simp

    YYPOWER  shift, and go to state 30

    $default  reduce using rule 21 (simppow)


state 15

    5 expr: expr . YYCOMMA expr
   28 simp: YYLBRACE expr . YYRBRACE

    YYRBRACE  shift, and go to state 31
    YYCOMMA   shift, and go to state 22


state 16

    5 expr: expr . YYCOMMA expr
   29 simp: YYLSQUARE expr . YYCOMMA expr YYRSQUARE

    YYCOMMA  shift, and go to state 32


state 17

   26 simp: YYFUNNAME simp .

    $default  reduce using rule 26 (simp)


state 18

   11 summand: YYMINUS prod .
   15 prod: prod . YYTIMES simppow
   16     | prod . YYDOT simppow
   17     | prod . YYDEVIDE simppow
   18     | prod . YYTIMES YYMINUS simppow
   19     | prod . YYDEVIDE YYMINUS simppow
   20     | prod . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYDOT       shift, and go to state 26
    YYDEVIDE    shift, and go to state 27
    YYTIMES     shift, and go to state 28

    $default  reduce using rule 11 (summand)

    simppow  go to state 29
    simp     go to state 14


state 19

   12 summand: YYPLUS prod .
   15 prod: prod . YYTIMES simppow
   16     | prod . YYDOT simppow
   17     | prod . YYDEVIDE simppow
   18     | prod . YYTIMES YYMINUS simppow
   19     | prod . YYDEVIDE YYMINUS simppow
   20     | prod . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYDOT       shift, and go to state 26
    YYDEVIDE    shift, and go to state 27
    YYTIMES     shift, and go to state 28

    $default  reduce using rule 12 (summand)

    simppow  go to state 29
    simp     go to state 14


state 20

    0 $accept: equation $end .

    $default  accept


state 21

    1 equation: expr YYEQUAL . expr

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 7
    YYPLUS      shift, and go to state 8

    expr     go to state 33
    summand  go to state 11
    prod     go to state 12
    simppow  go to state 13
    simp     go to state 14


state 22

    5 expr: expr YYCOMMA . expr

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 7
    YYPLUS      shift, and go to state 8

    expr     go to state 34
    summand  go to state 11
    prod     go to state 12
    simppow  go to state 13
    simp     go to state 14


state 23

    4 expr: summand YYDOTDOT . summand

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 7
    YYPLUS      shift, and go to state 8

    summand  go to state 35
    prod     go to state 12
    simppow  go to state 13
    simp     go to state 14


state 24

    8 summand: summand YYMINUS . prod
   10        | summand YYMINUS . YYPLUS prod

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYPLUS      shift, and go to state 36

    prod     go to state 37
    simppow  go to state 13
    simp     go to state 14


state 25

    7 summand: summand YYPLUS . prod
    9        | summand YYPLUS . YYMINUS prod

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 38

    prod     go to state 39
    simppow  go to state 13
    simp     go to state 14


state 26

   16 prod: prod YYDOT . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    simppow  go to state 40
    simp     go to state 14


state 27

   17 prod: prod YYDEVIDE . simppow
   19     | prod YYDEVIDE . YYMINUS simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 41

    simppow  go to state 42
    simp     go to state 14


state 28

   15 prod: prod YYTIMES . simppow
   18     | prod YYTIMES . YYMINUS simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 43

    simppow  go to state 44
    simp     go to state 14


state 29

   20 prod: prod simppow .

    $default  reduce using rule 20 (prod)


state 30

   22 simppow: simp YYPOWER . simp
   23        | simp YYPOWER . YYMINUS simp

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 45

    simp  go to state 46


state 31

   28 simp: YYLBRACE expr YYRBRACE .

    $default  reduce using rule 28 (simp)


state 32

    5 expr: expr YYCOMMA . expr
   29 simp: YYLSQUARE expr YYCOMMA . expr YYRSQUARE

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYMINUS     shift, and go to state 7
    YYPLUS      shift, and go to state 8

    expr     go to state 47
    summand  go to state 11
    prod     go to state 12
    simppow  go to state 13
    simp     go to state 14


state 33

    1 equation: expr YYEQUAL expr .
    5 expr: expr . YYCOMMA expr

    YYCOMMA  shift, and go to state 22

    $default  reduce using rule 1 (equation)


state 34

    5 expr: expr . YYCOMMA expr
    5     | expr YYCOMMA expr .

    YYCOMMA  shift, and go to state 22

    $default  reduce using rule 5 (expr)


state 35

    4 expr: summand YYDOTDOT summand .
    7 summand: summand . YYPLUS prod
    8        | summand . YYMINUS prod
    9        | summand . YYPLUS YYMINUS prod
   10        | summand . YYMINUS YYPLUS prod

    YYMINUS  shift, and go to state 24
    YYPLUS   shift, and go to state 25

    $default  reduce using rule 4 (expr)


state 36

   10 summand: summand YYMINUS YYPLUS . prod

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    prod     go to state 48
    simppow  go to state 13
    simp     go to state 14


state 37

    8 summand: summand YYMINUS prod .
   15 prod: prod . YYTIMES simppow
   16     | prod . YYDOT simppow
   17     | prod . YYDEVIDE simppow
   18     | prod . YYTIMES YYMINUS simppow
   19     | prod . YYDEVIDE YYMINUS simppow
   20     | prod . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYDOT       shift, and go to state 26
    YYDEVIDE    shift, and go to state 27
    YYTIMES     shift, and go to state 28

    $default  reduce using rule 8 (summand)

    simppow  go to state 29
    simp     go to state 14


state 38

    9 summand: summand YYPLUS YYMINUS . prod

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    prod     go to state 49
    simppow  go to state 13
    simp     go to state 14


state 39

    7 summand: summand YYPLUS prod .
   15 prod: prod . YYTIMES simppow
   16     | prod . YYDOT simppow
   17     | prod . YYDEVIDE simppow
   18     | prod . YYTIMES YYMINUS simppow
   19     | prod . YYDEVIDE YYMINUS simppow
   20     | prod . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYDOT       shift, and go to state 26
    YYDEVIDE    shift, and go to state 27
    YYTIMES     shift, and go to state 28

    $default  reduce using rule 7 (summand)

    simppow  go to state 29
    simp     go to state 14


state 40

   16 prod: prod YYDOT simppow .

    $default  reduce using rule 16 (prod)


state 41

   19 prod: prod YYDEVIDE YYMINUS . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    simppow  go to state 50
    simp     go to state 14


state 42

   17 prod: prod YYDEVIDE simppow .

    $default  reduce using rule 17 (prod)


state 43

   18 prod: prod YYTIMES YYMINUS . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    simppow  go to state 51
    simp     go to state 14


state 44

   15 prod: prod YYTIMES simppow .

    $default  reduce using rule 15 (prod)


state 45

   23 simppow: simp YYPOWER YYMINUS . simp

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6

    simp  go to state 52


state 46

   22 simppow: simp YYPOWER simp .

    $default  reduce using rule 22 (simppow)


state 47

    5 expr: expr . YYCOMMA expr
    5     | expr YYCOMMA expr .
   29 simp: YYLSQUARE expr YYCOMMA expr . YYRSQUARE

    YYRSQUARE  shift, and go to state 53
    YYCOMMA    shift, and go to state 22


state 48

   10 summand: summand YYMINUS YYPLUS prod .
   15 prod: prod . YYTIMES simppow
   16     | prod . YYDOT simppow
   17     | prod . YYDEVIDE simppow
   18     | prod . YYTIMES YYMINUS simppow
   19     | prod . YYDEVIDE YYMINUS simppow
   20     | prod . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYDOT       shift, and go to state 26
    YYDEVIDE    shift, and go to state 27
    YYTIMES     shift, and go to state 28

    $default  reduce using rule 10 (summand)

    simppow  go to state 29
    simp     go to state 14


state 49

    9 summand: summand YYPLUS YYMINUS prod .
   15 prod: prod . YYTIMES simppow
   16     | prod . YYDOT simppow
   17     | prod . YYDEVIDE simppow
   18     | prod . YYTIMES YYMINUS simppow
   19     | prod . YYDEVIDE YYMINUS simppow
   20     | prod . simppow

    YYLBRACE    shift, and go to state 1
    YYLSQUARE   shift, and go to state 2
    YYNUMBER    shift, and go to state 3
    YYNAME      shift, and go to state 4
    YYFUNNAME   shift, and go to state 5
    YYCONSTANT  shift, and go to state 6
    YYDOT       shift, and go to state 26
    YYDEVIDE    shift, and go to state 27
    YYTIMES     shift, and go to state 28

    $default  reduce using rule 9 (summand)

    simppow  go to state 29
    simp     go to state 14


state 50

   19 prod: prod YYDEVIDE YYMINUS simppow .

    $default  reduce using rule 19 (prod)


state 51

   18 prod: prod YYTIMES YYMINUS simppow .

    $default  reduce using rule 18 (prod)


state 52

   23 simppow: simp YYPOWER YYMINUS simp .

    $default  reduce using rule 23 (simppow)


state 53

   29 simp: YYLSQUARE expr YYCOMMA expr YYRSQUARE .

    $default  reduce using rule 29 (simp)
